# implicit-gpu

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  comparison.html  implicit-gpu.code-workspace  readme.md  run-tests.sh  rustfmt.toml  workbench.sh
core/gpu_strategy/: Cargo.toml
core/gpu_strategy/src/: compiler.rs  lib.rs  polygon.rs
core/implicit/: Cargo.toml  readme.md
core/implicit/src/: compiler.rs  debug.rs  geometry.rs  inspector.rs  lib.rs  polygon.rs
implicit/: Cargo.toml  out.txt  test.stl
implicit/src/: compiler.rs  debug.rs  evaluator.rs  geometry.rs  inspector.rs  lib.rs  lines.rs  main.rs  marching.rs  noise.rs  ocaml.rs  old_compiler.rs  output.rs  polygon.rs  scene.rs  surface_net.rs  telemetry.rs
implicit/src/compiler/: emit.rs  grouping.rs  mod.rs
implicit/src/debug/: image.rs  mod.rs  polygon.rs
implicit/src/evaluator/: mod.rs
implicit/src/exec/: drag.rs  extract.rs  freeze.rs  mod.rs  noise.rs  poly.rs  shape.rs
implicit/src/export/: svg.rs
implicit/src/lines/: connect.rs  dash.rs  fuse_ends.rs  graph_stitch.rs  join.rs  mod.rs  simplify.rs
implicit/src/marching/: marching.c  mod.rs  polygonize.rs
implicit/src/nan_filter/: mask.c  mod.rs  reorder.c  sum.c
implicit/src/nodes/: mod.rs  poly.rs
implicit/src/ocaml_compat/: mod.rs
implicit/src/opencl/: buffers.rs  mod.rs
implicit/src/polygon/: dist_to_line.c  mod.rs  polygon.c
implicit/src/shaders/: dist_to_line.c  drag.c  polygon.c  simplex.c  surfacenet.c
implicit/src/telemetry/: dump.rs  mod.rs  null.rs  svg_helpers.rs
implicit/tests/: circles.txt  circles_or.txt  frozen_circle.txt  poly_ops.txt  simple_frozen_polygon.txt  simple_polygon.txt  test.rs  util.rs
language/: Cargo.toml
language/src/: errors.rs  lib.rs  properties.rs  test.rs  validate.rs
server/: Cargo.toml
server/src/: main.rs
testsuite/: .gitignore  Cargo.toml  generate-tests.sh  out.html  tests.txt
testsuite/expectation-tests/: .gitignore
testsuite/expected/_failing_100_circles_grad/: scene.aabb
testsuite/expected/_failing_poly_ops/: scene.aabb
testsuite/expected/_reg_100_circles/: scene.aabb
testsuite/expected/_reg_100_grad/: scene.aabb
testsuite/expected/_reg_rect_sub_grid/: scene.aabb
testsuite/expected/_reg_rect_sub_grid_2/: scene.aabb
testsuite/expected/_reg_spikey_circles/: scene.aabb
testsuite/expected/_reg_spikey_trees/: scene.aabb
testsuite/expected/and_regression/: intermediate-0-0-0-basic.c  intermediate-0-0-0-basic.node  scene.aabb  shape-0-0.lines
testsuite/expected/basic_poly/: basic_poly.lines  basic_poly.values  shape-0-0.lines
testsuite/expected/circle/: circle.lines  circle.values  intermediate-0-0-0-basic.c  intermediate-0-0-0-basic.node  intermediate-0-0-0-basic.values  scene.aabb  shape-0-0.lines
testsuite/expected/circle_hole/: circle_hole.lines  circle_hole.values  intermediate-0-0-0-basic.c  intermediate-0-0-0-basic.node  intermediate-0-0-0-basic.values  shape-0-0.lines  shape-0-0.values
testsuite/expected/circles_and/: circles_and.lines  circles_and.values  intermediate-0-0-0-basic.c  intermediate-0-0-0-basic.node  intermediate-0-0-0-basic.values  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/circles_nested/: scene.aabb
testsuite/expected/circles_or/: circles_or.lines  circles_or.values  intermediate-0-0-0-basic.c  intermediate-0-0-0-basic.node  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/empty/: scene.aabb
testsuite/expected/frozen_or/: intermediate-0-0-0-basic.c  intermediate-0-0-0-basic.node  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/frozen_poly/: frozen_poly.lines  frozen_poly.values  intermediate-0-0-1-basic.c  intermediate-0-0-1-basic.values  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/grow/: grow.lines  grow.values  intermediate-0-0-0-poly.values  intermediate-0-0-1-basic.c  intermediate-0-0-1-basic.values  scene.aabb  shape-0-0.lines
testsuite/expected/inversion/: inversion.lines  inversion.values
testsuite/expected/poly_ops/: intermediate-0-0-0-poly.values  intermediate-0-0-1-basic.c  intermediate-0-0-1-basic.node  intermediate-0-0-1-basic.values  poly_ops.lines  poly_ops.values  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/rect/: rect.lines  rect.values  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/rounded_rect/: rounded_rect.lines  rounded_rect.values
testsuite/expected/rounded_rect_sub/: intermediate-0-0-0-poly.values  intermediate-0-0-1-basic.c  intermediate-0-0-1-basic.values  intermediate-0-0-2-basic.c  rounded_rect_sub.lines  rounded_rect_sub.values  scene.aabb  shape-0-0.lines  shape-0-0.values
testsuite/expected/rrect/: scene.aabb
testsuite/expected/subtraction/: intermediate-0-0-0-poly.values  intermediate-0-0-1-basic.c  intermediate-0-0-1-basic.node  intermediate-0-0-1-basic.values  scene.aabb  shape-0-0.lines  subtraction.lines  subtraction.values
testsuite/src/: formats.rs  lib.rs  main.rs  run_test.rs
testsuite/tests/: basic_poly.shape  basic_rect.shape  circles_intersection.shape  circles_intersection_freeze.shape  circles_union.shape  displaced_circle.shape  dragged_circle.shape  easy_ring.shape  easy_scaled_ring.shape  empty_dragged_circle.shape  expanded_poly.shape  five_star.shape  four_star.shape  grid_of_circles.shape  hex.shape  huge_star.shape  inverted_circle.shape  inverted_grid.shape  more_specific_simplex.shape  overlay_test.shape  overlay_test_sub.shape  pent.shape  quad.shape  ring.shape  rotate_around_test.shape  rotated_grid.shape  rotated_square.shape  rr.shape  rr_scaled.shape  scaled_circle.shape  scaled_ring.shape  six_star.shape  small_circle.shape  small_simplex.shape  three_star.shape  translated_and_scaled_circle.shape  translated_circle.shape  triangle.shape  waiting_room_art.shape
util/: Cargo.toml
util/aabb-quadtree/: Cargo.toml
util/buffer_dump/: Cargo.toml
util/debug_helpers/: Cargo.toml
util/gpu-interp/: Cargo.toml  build.rs
util/line-stitch/: .gitignore  Cargo.toml
util/src/: text2png.rs  vispoly.rs
(+747 files in other folders)
