[package]
name = "implicit"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
workspace = "../"

[dependencies]
ocl = "0.12.*"
flame = "0.2.0"
lazy_static = "0.2.*"
image = "0.10.*"
itertools = "0.5.*"
vecmath = "*"
fnv = "*"
typed-arena = "1.2.0"
serde = "1.*.*"
serde_derive = "1.*.*"
latin = "0.1.5"
rand = "0.3.15"
serde_json = "1.*.*"
snoot = "0.1.*"
vectorphile = "0.1.*"
