[package]
name = "server"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
workspace = "../"

[[bin]]
name = "implicit-server"
path = "./src/main.rs"

[dependencies]
iron = "0.5.*"
staticfile = "0.4.*"
mount = "0.3.*"
serde = "1.*.*"
serde_derive = "1.*.*"
serde_json= "1.*.*"

[dependencies.implicit]
path = "../implicit"
