[package]
name = "server"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
workspace = "../"

[[bin]]
name = "implicit-server"
path = "./src/main.rs"

[dependencies]
hyper = "*"
mime = "*"
serde = "1.*.*"
serde_derive = "1.*.*"

[dependencies.happy]
path = "../../happy"

[dependencies.implicit]
path = "../implicit"

