[package]
name = "server"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
workspace = "../"

[[bin]]
name = "implicit-server"
path = "./src/main.rs"

[dependencies]
hyper = "*"
mime = "*"
serde = "1.*.*"
serde_derive = "1.*.*"
chrono = "0.4"
flame = "0.2.*"
latin = "0.1.7"
lazy_static="*"

[dependencies.happy]
path = "../happy"

[dependencies.implicit]
path = "../implicit"

