[package]
name = "testsuite"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
workspace = "../"

[[bin]]
name = "testsuite"
path = "src/main.rs"

[dependencies]
walkdir = "1.0.7"
latin = "0.1.5"
flame = "0.1.11"
serde = "1.*.*"
serde_derive = "1.*.*"
colored = "1.5.0"
regex = "*"

[dependencies.implicit]
path = "../implicit"

[dependencies.snoot]
path = "../../snoot"

[dependencies.implicit-language]
path = "../language"
