[package]
name = "testsuite"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[dependencies]
serde = "1.*.*"

#expectation = "0.1.*"
[dependencies.expectation]
path = "../../expectation/expectation"

[dependencies.snoot]
path = "../../snoot"

[dependencies.implicit]
path = "../core/implicit"
