[package]
name = "util"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
workspace = "../"

[[bin]]
name = "text-2-png"
path = "./src/text2png.rs"

[[bin]]
name = "vis-poly"
path = "./src/vispoly.rs"

[dependencies]
latin = "0.1.5"
lux = "*"

[dependencies.implicit]
path = "../implicit"
