[package]
name = "implicit"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name  = "surface_net"
path = "src/bin/surface_net.rs"

[dependencies]
#ocl = "0.19.*"
flame = "0.2.0"
lazy_static = "0.2.*"
image = "0.19.*"
itertools = "0.5.*"
vecmath = "*"
fnv = "1.0.6"
serde = "1.*.*"
serde_derive = "1.*.*"
latin = "0.1.5"
rand = "0.3.15"
serde_json = "1.*.*"
num-traits = "0.2.*"
typed-arena = "1.4.1"

#expectation = "0.1.*"
#expectation_plugin  = "0.1.2"
[dependencies.expectation]
path = "../../../expectation/expectation"
[dependencies.expectation-shared]
path = "../../../expectation/expectation-shared"
[dependencies.expectation_plugin]
path = "../../../expectation/expectation-plugin"

[dependencies.ocl]
path = "../../../ocl/ocl"

[dependencies.extern_api]
path = "../extern_api"

[dependencies.euclid]
version = "0.19.0"
features = ["serde"]

[dependencies.snoot]
path = "../../../snoot"

[dependencies.gpu-interp]
path = "../../util/gpu-interp"

[dependencies.line-stitch]
path = "../../util/line-stitch"

[dependencies.aabb-quadtree]
path = "../../util/aabb-quadtree"

[dependencies.vectorphile]
path = "../../util/vectorphile"

[dependencies.buffer_dump]
path = "../../util/buffer_dump"
