[package]
name = "debug_helpers"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
edition = "2018"

[dependencies]
image = "0.19.*"
flame = "0.2.0"

[dependencies.euclid]
version = "0.19.0"
features = ["serde"]

[dependencies.vectorphile]
path = "../vectorphile"

[dependencies.line-stitch]
path = "../line-stitch"

[dependencies.gpu-interp]
path = "../gpu-interp"

[dependencies.buffer_dump]
path = "../buffer_dump"

[dependencies.strategy]
path ="../../core/strategy"

[dependencies.expectation]
path = "../../../expectation/expectation"

[dependencies.expectation-shared]
path = "../../../expectation/expectation-shared"

[dependencies.expectation_plugin]
path = "../../../expectation/expectation-plugin"

