[package]
name = "gpu-interp"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

build="./build.rs"

[dependencies]
#ocl = "*"
euclid = "*"
cranelift = "0.25.0"
cranelift-module = "0.25.0"
cranelift-simplejit = "0.25.0"

[dependencies.ocl]
path = "../../../ocl/ocl"

[dependencies.strategy]
path = "../../core/strategy"
